// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack actions pop 1`] = `
Array [
  Object {
    "head": "3",
    "nodes": Object {
      "3": Object {
        "id": "3",
        "next": null,
        "value": 3,
      },
    },
  },
  Object {
    "head": "2",
    "nodes": Object {
      "2": Object {
        "id": "2",
        "next": "3",
        "value": 2,
      },
      "3": Object {
        "id": "3",
        "next": null,
        "value": 3,
      },
    },
  },
  Object {
    "head": "1",
    "nodes": Object {
      "1": Object {
        "id": "1",
        "next": "2",
        "value": 1,
      },
      "2": Object {
        "id": "2",
        "next": "3",
        "value": 2,
      },
      "3": Object {
        "id": "3",
        "next": null,
        "value": 3,
      },
    },
  },
  Object {
    "head": "2",
    "nodes": Object {
      "2": Object {
        "id": "2",
        "next": "3",
        "value": 2,
      },
      "3": Object {
        "id": "3",
        "next": null,
        "value": 3,
      },
    },
  },
]
`;

exports[`Stack actions push 1`] = `
Array [
  Object {
    "head": "3",
    "nodes": Object {
      "3": Object {
        "id": "3",
        "next": null,
        "value": 3,
      },
    },
  },
  Object {
    "head": "2",
    "nodes": Object {
      "2": Object {
        "id": "2",
        "next": "3",
        "value": 2,
      },
      "3": Object {
        "id": "3",
        "next": null,
        "value": 3,
      },
    },
  },
  Object {
    "head": "1",
    "nodes": Object {
      "1": Object {
        "id": "1",
        "next": "2",
        "value": 1,
      },
      "2": Object {
        "id": "2",
        "next": "3",
        "value": 2,
      },
      "3": Object {
        "id": "3",
        "next": null,
        "value": 3,
      },
    },
  },
]
`;

exports[`Stack model create in model(Todo) 1`] = `
Object {
  "todos": Object {
    "head": "2",
    "nodes": Object {
      "1": Object {
        "id": "1",
        "next": null,
        "value": Object {
          "active": false,
          "name": "name1",
        },
      },
      "2": Object {
        "id": "2",
        "next": "1",
        "value": Object {
          "active": true,
          "name": "name2",
        },
      },
    },
  },
}
`;

exports[`Stack model create in model(int) 1`] = `
Object {
  "numbers": Object {
    "head": null,
    "nodes": Object {},
  },
}
`;

exports[`Stack model create(int) 1`] = `
Object {
  "head": null,
  "nodes": Object {},
}
`;
